--- a/public/user_information.html
+++ b/public/user_information.html
@@ -12,11 +12,63 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
 
+    <link rel="stylesheet" href="ds_hw1.css">
+
     <title>DS Assignment 1</title>
   </head>
   <body>
-    <h1>User Information</h1>
+    <div class = "container">
 
+    <header class="row">
+
+    <h1>Olivia Pope</h1>
+
+    </header>
+
+    <nav class="row navbar navbar-default">
+      <ul class="nav navbar-nav">
+      <a href="index_home.html">Home</a>
+      <a href="user_information.html">About Me</a>
+      <a href="OPstats_table.html">Success Metrics</a>
+      </ul>
+    </nav>
+
+
+    <div class="row">
+
+    <div class = "col-lg-6 col-md-6 col-sm-12 col-xs-12">
+
+    <img src="oliviaPope_profilepic.jpg" alt="Olivia Pope Profile Picture"
+    width="350" height="200"/>
+
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+
+    <img src="oliviaPope_profilepic2.jpg" alt="Olivia Pope Profile Picture"
+    width="350" height="200"/>
+
+    </div>
+
+    </div>
+
+    <main class="row">
+
+    Full Name: Olivia Carolyn Pope
+  </br>
+    Birthdate: January 31, 1977
+  </br>
+    Age: 41
+  </br>
+    Country: United States
+  </br>
+  Occupation: Lawyer and United States White House Chief of Staff
+  </br>
+    Email: olivia.pope31@gmail.com
+
+  </main>
+
+    </div>
 
 
   </body>
